tests/baselines/reference/deleteOperator1.errors.txt
tests/cases/compiler/deleteOperator1.ts(2,25): error TS2703: The operand of a delete operator must be a property reference.
tests/cases/compiler/deleteOperator1.ts(3,21): error TS2703: The operand of a delete operator must be a property reference.
tests/cases/compiler/deleteOperator1.ts(4,5): error TS2322: Type '真假' is not assignable to type '数字'.
tests/cases/compiler/deleteOperator1.ts(4,24): error TS2703: The operand of a delete operator must be a property reference.


==== tests/cases/compiler/deleteOperator1.ts (4 errors) ====
    var a;
    var x: boolean = delete a;
                            ~
!!! error TS2703: The operand of a delete operator must be a property reference.
    var y: any = delete a;
                        ~
!!! error TS2703: The operand of a delete operator must be a property reference.
    var z: number = delete a;
        ~
!!! error TS2322: Type '真假' is not assignable to type '数字'.
                           ~
!!! error TS2703: The operand of a delete operator must be a property reference.